tooling/nargo_cli/tests/snapshots/execution_success/simple_shield/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(
    priv_key: Field,
    note_root: pub Field,
    index: Field,
    note_hash_path: [Field; 3],
    to_pubkey_x: Field,
    to_pubkey_y: Field,
) -> pub [Field; 2] {
    let priv_key_as_scalar: std::embedded_curve_ops::EmbeddedCurveScalar =
        std::embedded_curve_ops::EmbeddedCurveScalar { lo: priv_key, hi: 0_Field };
    let pubkey: std::embedded_curve_ops::EmbeddedCurvePoint =
        std::embedded_curve_ops::fixed_base_scalar_mul(priv_key_as_scalar);
    let note_commitment: std::embedded_curve_ops::EmbeddedCurvePoint =
        std::hash::pedersen_commitment([pubkey.x, pubkey.y]);
    let nullifier: std::embedded_curve_ops::EmbeddedCurvePoint =
        std::hash::pedersen_commitment([note_commitment.x, index, priv_key]);
    let receiver_note_commitment: std::embedded_curve_ops::EmbeddedCurvePoint =
        std::hash::pedersen_commitment([to_pubkey_x, to_pubkey_y]);
    assert(note_root == compute_merkle_root(note_commitment.x, index, note_hash_path));
    [nullifier.x, receiver_note_commitment.x]
}

fn compute_merkle_root<let N: u32>(leaf: Field, index: Field, hash_path: [Field; N]) -> Field {
    let index_bits: [bool; N] = index.to_le_bits();
    let mut current: Field = leaf;
    for i in 0_u32..N {
        let path_bit: bool = index_bits[i];
        let (hash_left, hash_right): (Field, Field) = if path_bit {
            (hash_path[i], current)
        } else {
            (current, hash_path[i])
        };
        current = std::hash::pedersen_hash([hash_left, hash_right]);
    }
    current
}
