tooling/nargo_cli/tests/snapshots/execution_success/simple_shield/execute__tests__force_brillig_false_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "priv_key",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      },
      {
        "name": "note_root",
        "type": {
          "kind": "field"
        },
        "visibility": "public"
      },
      {
        "name": "index",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      },
      {
        "name": "note_hash_path",
        "type": {
          "kind": "array",
          "length": 3,
          "type": {
            "kind": "field"
          }
        },
        "visibility": "private"
      },
      {
        "name": "to_pubkey_x",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      },
      {
        "name": "to_pubkey_y",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      }
    ],
    "return_type": {
      "abi_type": {
        "kind": "array",
        "length": 2,
        "type": {
          "kind": "field"
        }
      },
      "visibility": "public"
    },
    "error_types": {
      "15625123961815045929": {
        "error_kind": "string",
        "string": "Field failed to decompose into specified 3 limbs"
      },
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": [
    "func 0",
    "current witness index : _69",
    "private parameters indices : [_0, _2, _3, _4, _5, _6, _7]",
    "public parameters indices : [_1]",
    "return value indices : [_8, _9]",
    "BLACKBOX::MULTI_SCALAR_MUL [(1, 254), (17631683881184975370165255887551781615748388533673675138860, 254), (0, 1), (_0, 254), (0, 254)] [_10, _11, _12]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _10) 0 ]], outputs: [_13, _14]",
    "EXPR [ (1, _10) (-1, _13) (-340282366920938463463374607431768211456, _14) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _11) 0 ]], outputs: [_15, _16]",
    "EXPR [ (1, _11) (-1, _15) (-340282366920938463463374607431768211456, _16) 0 ]",
    "BLACKBOX::MULTI_SCALAR_MUL [(3728882899078719075161482178784387565366481897740339799480980287259621149274, 254), (-9903063709032878667290627648209915537972247634463802596148419711785767431332, 254), (0, 1), (2393473289045184898987089634332637236754766663897650125720167164137088869378, 254), (-7135402912423807765050323395026152633898511180575289670895350565966806597339, 254), (0, 1), (_13, 254), (_14, 254), (_15, 254), (_16, 254)] [_17, _18, _19]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _17) 0 ]], outputs: [_20, _21]",
    "EXPR [ (1, _17) (-1, _20) (-340282366920938463463374607431768211456, _21) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _2) 0 ]], outputs: [_22, _23]",
    "EXPR [ (1, _2) (-1, _22) (-340282366920938463463374607431768211456, _23) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _0) 0 ]], outputs: [_24, _25]",
    "EXPR [ (1, _0) (-1, _24) (-340282366920938463463374607431768211456, _25) 0 ]",
    "BLACKBOX::MULTI_SCALAR_MUL [(3728882899078719075161482178784387565366481897740339799480980287259621149274, 254), (-9903063709032878667290627648209915537972247634463802596148419711785767431332, 254), (0, 1), (2393473289045184898987089634332637236754766663897650125720167164137088869378, 254), (-7135402912423807765050323395026152633898511180575289670895350565966806597339, 254), (0, 1), (-9101662836674550326256996212378706138142399878494295154626728833686305224889, 254), (1658946642478826263901298755938807527017017780224674388532518006781615929512, 254), (0, 1), (_20, 254), (_21, 254), (_22, 254), (_23, 254), (_24, 254), (_25, 254)] [_26, _27, _28]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _6) 0 ]], outputs: [_29, _30]",
    "EXPR [ (1, _6) (-1, _29) (-340282366920938463463374607431768211456, _30) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _7) 0 ]], outputs: [_31, _32]",
    "EXPR [ (1, _7) (-1, _31) (-340282366920938463463374607431768211456, _32) 0 ]",
    "BLACKBOX::MULTI_SCALAR_MUL [(3728882899078719075161482178784387565366481897740339799480980287259621149274, 254), (-9903063709032878667290627648209915537972247634463802596148419711785767431332, 254), (0, 1), (2393473289045184898987089634332637236754766663897650125720167164137088869378, 254), (-7135402912423807765050323395026152633898511180575289670895350565966806597339, 254), (0, 1), (_29, 254), (_30, 254), (_31, 254), (_32, 254)] [_33, _34, _35]",
    "BRILLIG CALL func 1: inputs: [EXPR [ (1, _2) 0 ], EXPR [ 3 ], EXPR [ 2 ]], outputs: [[_36, _37, _38]]",
    "BLACKBOX::RANGE [(_36, 1)] []",
    "BLACKBOX::RANGE [(_37, 1)] []",
    "BLACKBOX::RANGE [(_38, 1)] []",
    "EXPR [ (1, _2) (-1, _36) (-2, _37) (-4, _38) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _36, _3) (-1, _36, _17) (1, _17) 0 ]], outputs: [_39, _40]",
    "EXPR [ (1, _3, _36) (-1, _60) 0 ]",
    "EXPR [ (-1, _17, _36) (-1, _61) 0 ]",
    "EXPR [ (1, _17) (-1, _39) (-340282366920938463463374607431768211456, _40) (1, _60) (1, _61) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (-1, _36, _3) (1, _36, _17) (1, _3) 0 ]], outputs: [_41, _42]",
    "EXPR [ (1, _3) (-1, _41) (-340282366920938463463374607431768211456, _42) (-1, _60) (-1, _61) 0 ]",
    "BLACKBOX::MULTI_SCALAR_MUL [(3728882899078719075161482178784387565366481897740339799480980287259621149274, 254), (-9903063709032878667290627648209915537972247634463802596148419711785767431332, 254), (0, 1), (2393473289045184898987089634332637236754766663897650125720167164137088869378, 254), (-7135402912423807765050323395026152633898511180575289670895350565966806597339, 254), (0, 1), (-1094708040843609169356775910874053498301840173462935739639689208799068762676, 254), (-718703907181967287621274717949248537252263842169639534402461291799004475262, 254), (0, 1), (_39, 254), (_40, 254), (_41, 254), (_42, 254), (2, 254), (0, 254)] [_43, _44, _45]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _37, _4) (-1, _37, _43) (1, _43) 0 ]], outputs: [_46, _47]",
    "EXPR [ (1, _4, _37) (-1, _64) 0 ]",
    "EXPR [ (-1, _37, _43) (-1, _65) 0 ]",
    "EXPR [ (1, _43) (-1, _46) (-340282366920938463463374607431768211456, _47) (1, _64) (1, _65) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (-1, _37, _4) (1, _37, _43) (1, _4) 0 ]], outputs: [_48, _49]",
    "EXPR [ (1, _4) (-1, _48) (-340282366920938463463374607431768211456, _49) (-1, _64) (-1, _65) 0 ]",
    "BLACKBOX::MULTI_SCALAR_MUL [(3728882899078719075161482178784387565366481897740339799480980287259621149274, 254), (-9903063709032878667290627648209915537972247634463802596148419711785767431332, 254), (0, 1), (2393473289045184898987089634332637236754766663897650125720167164137088869378, 254), (-7135402912423807765050323395026152633898511180575289670895350565966806597339, 254), (0, 1), (-1094708040843609169356775910874053498301840173462935739639689208799068762676, 254), (-718703907181967287621274717949248537252263842169639534402461291799004475262, 254), (0, 1), (_46, 254), (_47, 254), (_48, 254), (_49, 254), (2, 254), (0, 254)] [_50, _51, _52]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _38, _5) (-1, _38, _50) (1, _50) 0 ]], outputs: [_53, _54]",
    "EXPR [ (1, _5, _38) (-1, _68) 0 ]",
    "EXPR [ (-1, _38, _50) (-1, _69) 0 ]",
    "EXPR [ (1, _50) (-1, _53) (-340282366920938463463374607431768211456, _54) (1, _68) (1, _69) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (-1, _38, _5) (1, _38, _50) (1, _5) 0 ]], outputs: [_55, _56]",
    "EXPR [ (1, _5) (-1, _55) (-340282366920938463463374607431768211456, _56) (-1, _68) (-1, _69) 0 ]",
    "BLACKBOX::MULTI_SCALAR_MUL [(3728882899078719075161482178784387565366481897740339799480980287259621149274, 254), (-9903063709032878667290627648209915537972247634463802596148419711785767431332, 254), (0, 1), (2393473289045184898987089634332637236754766663897650125720167164137088869378, 254), (-7135402912423807765050323395026152633898511180575289670895350565966806597339, 254), (0, 1), (-1094708040843609169356775910874053498301840173462935739639689208799068762676, 254), (-718703907181967287621274717949248537252263842169639534402461291799004475262, 254), (0, 1), (_53, 254), (_54, 254), (_55, 254), (_56, 254), (2, 254), (0, 254)] [_57, _58, _59]",
    "EXPR [ (1, _1) (-1, _57) 0 ]",
    "EXPR [ (1, _8) (-1, _26) 0 ]",
    "EXPR [ (1, _9) (-1, _33) 0 ]",
    "unconstrained func 0",
    "[Const { destination: Direct(2), bit_size: Integer(U32), value: 1 }, Const { destination: Direct(1), bit_size: Integer(U32), value: 32839 }, Const { destination: Direct(0), bit_size: Integer(U32), value: 3 }, Const { destination: Relative(2), bit_size: Integer(U32), value: 1 }, Const { destination: Relative(3), bit_size: Integer(U32), value: 0 }, CalldataCopy { destination_address: Direct(32836), size_address: Relative(2), offset_address: Relative(3) }, Mov { destination: Relative(1), source: Direct(32836) }, Call { location: 14 }, Call { location: 15 }, Mov { destination: Direct(32837), source: Relative(1) }, Mov { destination: Direct(32838), source: Relative(2) }, Const { destination: Relative(3), bit_size: Integer(U32), value: 32837 }, Const { destination: Relative(4), bit_size: Integer(U32), value: 2 }, Stop { return_data: HeapVector { pointer: Relative(3), size: Relative(4) } }, Return, Call { location: 24 }, Cast { destination: Relative(3), source: Relative(1), bit_size: Integer(U128) }, Cast { destination: Relative(2), source: Relative(3), bit_size: Field }, BinaryFieldOp { destination: Relative(3), op: Sub, lhs: Relative(1), rhs: Relative(2) }, Const { destination: Relative(1), bit_size: Field, value: 8680525429001239497728366687280168587232520577698044359798894838135247199343 }, BinaryFieldOp { destination: Relative(4), op: Mul, lhs: Relative(3), rhs: Relative(1) }, Mov { destination: Relative(1), source: Relative(2) }, Mov { destination: Relative(2), source: Relative(4) }, Return, Const { destination: Direct(32772), bit_size: Integer(U32), value: 30720 }, BinaryIntOp { destination: Direct(32771), op: LessThan, bit_size: U32, lhs: Direct(0), rhs: Direct(32772) }, JumpIf { condition: Direct(32771), location: 29 }, IndirectConst { destination_pointer: Direct(1), bit_size: Integer(U64), value: 17843811134343075018 }, Trap { revert_data: HeapVector { pointer: Direct(1), size: Direct(2) } }, Return]",
    "unconstrained func 1",
    "[Const { destination: Direct(5), bit_size: Integer(U32), value: 0 }, Const { destination: Direct(6), bit_size: Integer(U32), value: 1 }, Const { destination: Direct(7), bit_size: Integer(U32), value: 3 }, CalldataCopy { destination_address: Direct(0), size_address: Direct(7), offset_address: Direct(5) }, Cast { destination: Direct(1), source: Direct(1), bit_size: Integer(U32) }, Const { destination: Direct(9), bit_size: Integer(U32), value: 10 }, BinaryIntOp { destination: Direct(7), op: Add, bit_size: U32, lhs: Direct(9), rhs: Direct(1) }, BinaryFieldOp { destination: Direct(3), op: IntegerDiv, lhs: Direct(0), rhs: Direct(2) }, BinaryFieldOp { destination: Direct(4), op: Mul, lhs: Direct(3), rhs: Direct(2) }, BinaryFieldOp { destination: Direct(4), op: Sub, lhs: Direct(0), rhs: Direct(4) }, Store { destination_pointer: Direct(9), source: Direct(4) }, BinaryIntOp { destination: Direct(9), op: Add, bit_size: U32, lhs: Direct(9), rhs: Direct(6) }, Mov { destination: Direct(0), source: Direct(3) }, BinaryIntOp { destination: Direct(8), op: LessThan, bit_size: U32, lhs: Direct(9), rhs: Direct(7) }, JumpIf { condition: Direct(8), location: 7 }, Const { destination: Direct(9), bit_size: Integer(U32), value: 10 }, Stop { return_data: HeapVector { pointer: Direct(9), size: Direct(1) } }]"
  ],
  "debug_symbols": "[debug_symbols]",
  "file_map": "[file_map]",
  "names": [
    "main"
  ],
  "brillig_names": [
    "decompose_hint",
    "directive_to_radix"
  ]
}
