tooling/nargo_cli/tests/snapshots/execution_success/simple_shield/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: true
exit_code: 0
----- stdout -----
[simple_shield] Circuit output: Vec([Field(-2329007708516665037613529239208447490630436957615428178130781952115302102929), Field(-8239228674759922158881164241629289082085529659182787783117272535584851168087)])
----- stderr -----
