tooling/nargo_cli/tests/snapshots/execution_success/simple_shield/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0(v3: Field, v4: Field, v5: Field, v6: [Field; 3], v7: Field, v8: Field):
    (no terminator instruction)
}
[simple_shield] Circuit output: [0x2b3e2281b493baa4497aa5fe5abf9f340f43bd9c4a65dcb1cda20dc210058870, 0x1e2d117a1b344bd3ff0cf1d5f860f02cd8b27f6b8ccd2e844852f2c93d36f4aa]
